# chicago-crime

./: .gitignore  chicago_crime.db  jupyter.ipynb  main.py  pyproject.toml
app/: config.py  database.py  models.py
app/services/: api_client.py  etl.py
scripts/: run_backfill.py  run_daily.py  run_dimensions.py
